src/objects/Order_Line_Item_Vendor__c.object
<CustomObject>
    <description>The Order Line Item Object will represent the item selected during Order Entry. 
The record looks up to Order record.</description>
    <fields>
        <fullName>Additional_Termination_Comment_del__c</fullName>
        <label>Additional Termination Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Order Line Items (Vendor)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTL_Date__c</fullName>
        <label>DTL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_Stop_Date__c</fullName>
        <label>Earliest Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <label>Fri</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <label>Mon</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Line Items (Vendor)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PHd__c</fullName>
        <label>PHd</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHe__c</fullName>
        <label>PHe</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order Line Item</label>
        <referenceTo>Order_Line_Item_Vendor__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Vendor Subscription can only select Newspapers</errorMessage>
            <filterItems>
                <field>Publication__c.Publication_Type__c</field>
                <operation>equals</operation>
                <value>N</value>
            </filterItems>
            <filterItems>
                <field>Publication__c.Platform_Type__c</field>
                <operation>equals</operation>
                <value>Print</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Prefer Vendor Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prefer Cash Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Odd Subscription Patterns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPH Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_Postal_Code__c</fullName>
        <formula>Order__r.Recipient_Contact__r.Address__r.Postal_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recipient Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <label>Sat</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_to_Retention__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to route the Case to Retention Team</description>
        <label>Send to Retention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stop_Request_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor_Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription (Vendor) Publication</label>
        <referenceTo>Subscription_Vendor_Publication__c</referenceTo>
        <relationshipLabel>Order Line Items (Vendor)</relationshipLabel>
        <relationshipName>Order_Line_Items_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscription_Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription (Vendor)</label>
        <referenceTo>Subscription_Vendor__c</referenceTo>
        <relationshipLabel>Publications</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <label>Sun</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suppress_Vendor_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress Vendor Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminating_Reason__c</fullName>
        <label>Terminating Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Package - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Package - Misc. Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change to another pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Credit card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - PayPal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment failure - Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Not reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Moving overseas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Service / Delivery issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Digital / apps issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - Policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request - No reason given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduction in quantity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Thu__c</fullName>
        <label>Thu</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <label>Tue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Sms_Remarks__c</fullName>
        <label>Vendor Sms Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <label>Wed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wrapper_Number__c</fullName>
        <label>Wrapper Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Line Item (Vendor)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Recipient_Postal_Code__c</columns>
        <columns>Vendor__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OLIV{0000000000}</displayFormat>
        <label>Order Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items (Vendor)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_Start_Date_Rule_1</fullName>
        <active>true</active>
        <description>Order Line START DATE must be equal or greater than today.</description>
        <errorConditionFormula>IF(ISCHANGED(Start_Date__c),IF(Start_Date__c &lt;= TODAY(),TRUE, FALSE),FALSE) || AND(ISNEW(),Start_Date__c &lt;= TODAY())</errorConditionFormula>
        <errorMessage>Start Date must be greater than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Order_Stop_Date_Rule_1</fullName>
        <active>true</active>
        <description>Order line STOP DATE must be greater than the order line START DATE.</description>
        <errorConditionFormula>Stop_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorDisplayField>Stop_Date__c</errorDisplayField>
        <errorMessage>Order line STOP DATE must be greater than the order line START DATE.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Start_Subscription_Date</fullName>
        <active>true</active>
        <description>Requires user to enter Start Subscription Date
[KCampang] 08/11/2014. Updated Error Condition.</description>
        <errorConditionFormula>ISNULL(Start_Date__c) &amp;&amp;  NOT(ISPICKVAL(Order__r.Case_Record_Type__c , &apos;Stop Subscription&apos;))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Please enter Start Subscription Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Stop_Request_Date_not_valid</fullName>
        <active>false</active>
        <description>Stop Request Date must be later than Earliest Stop Date and Non-Publication day.</description>
        <errorConditionFormula>Stop_Request_Date__c = Earliest_Stop_Date__c</errorConditionFormula>
        <errorDisplayField>Stop_Request_Date__c</errorDisplayField>
        <errorMessage>Stop Request Date must be later than Earliest Stop Date and Non-Publication day.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_entered_qty</fullName>
        <active>false</active>
        <description>Qty must be greater than 0 and must not be Null
[KCampang] 08/11/2014. SCR_ OrderEntry_Vendor_VR_6. Updated Error condition.</description>
        <errorConditionFormula>((Mon__c &lt;0 )|| (Tue__c &lt;0)  || (Wed__c &lt;0) || (Thu__c &lt;0) || (Fri__c &lt;0) ||
 (Sat__c &lt;0) ||(Sun__c &lt;0) || ((Mon__c + Tue__c + Wed__c + Thu__c + Fri__c + Sat__c + Sun__c) &lt; 0))
&amp;&amp;
CONTAINS(Case__r.Account.RecordType.Name, &apos;Direct&apos;)</errorConditionFormula>
        <errorMessage>Qty should not be less than zero and there should be at least a day with qty greater than zero.</errorMessage>
    </validationRules>
</CustomObject>